# chain-guardrail

./: README.md  pyproject.toml
src/chain_guardrail/: main.py
src/chain_guardrail.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/chain_guardrail/bias/: gender.py
src/chain_guardrail/pii/: class_definition.py  presidio_pii.py
src/chain_guardrail/pii/presidio/: parser.py  parser_pii.py
src/chain_guardrail/profanity/: bad_words_list.py  fixed_pattern.py
src/chain_guardrail/profanity/dictionary_based/: bad_words.txt  parser_profanity.py
src/chain_guardrail/toxicity/: large.py
tests/: test.py
