[project]
name = "chain_guardrail"
version = "0.0.10"
authors = [
  { name="Shubham Gupta", email="shubham.mdsk@gmail.com" },
]
description = "Guardrails compatible with Langchan=in's LCEL"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "presidio-analyzer==2.2.354",
    "presidio-anonymizer==2.2.354",
    "transformers==4.42.3"
]

[project.urls]
Homepage = "https://github.com/shubh1204/chain-guardrail.git"
